force-app/main/default/objects/Template_Version__c/Template_Version__c.object-meta.xml
<CustomObject>
    <description>A revision of a Document_Template__c. Holds the template body JSON. Multiple versions per template; version selection at generate time is driven by Template_Mapping__c rules.</description>
    <label>Template Version</label>
    <nameField>
        <displayFormat>TV-{0000}</displayFormat>
        <label>Template Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>