force-app/main/default/objects/Template_Version__c/fields/Definition_Json__c.field-meta.xml
<CustomField>
    <fullName>Definition_Json__c</fullName>
    <description>The template body as JSON (rows, cols, text spans, merge tokens, conditional rules, tables). If exceeds 128KB, JSON spills to a ContentVersion titled "definition.json" attached to this Template_Version__c; PdfTemplateService reads field-or-file transparently.</description>
    <label>Definition JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>