force-app/main/default/objects/Template_Version__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <description>Numeric revision (e.g., 1, 2, 3). Used by Template_Mapping__c rules to pick the right version for a given source record's Revision_Number__c value.</description>
    <label>Revision Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>