force-app/main/default/objects/Template_Version__c/fields/Sample_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Id__c</fullName>
    <description>Last-used preview record ID for builder convenience. Stored as plain Text rather than a polymorphic reference because the target SObject varies per template.</description>
    <label>Sample Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>